--- a/app/src/main/res/layout/fragment_novel_corona_virus_details.xml
+++ b/app/src/main/res/layout/fragment_novel_corona_virus_details.xml
@@ -10,7 +10,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:overScrollMode="never"
-        android:layout_marginTop="12dp"
+        android:scrollbars="none"
+        android:layout_marginTop="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -19,9 +20,220 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            >
+
+            <ImageView
+                android:id="@+id/imgv_heading_img_novel_coronavirus_details_frag"
+                android:layout_width="match_parent"
+                android:layout_height="200dp"
+                android:src="@mipmap/coronavirus_heading"
+                android:adjustViewBounds="true"
+                android:scaleType="fitXY"
+                android:layout_marginTop="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                />
+
+
+
+            <LinearLayout
+                android:id="@+id/ll_eng_tv_container_novel_corona_details_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginEnd="10dp"
+                android:layout_marginRight="10dp"
+                android:gravity="left"
+                android:visibility="gone"
+                app:layout_constraintTop_toBottomOf="@+id/imgv_heading_img_novel_coronavirus_details_frag"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                >
+
+
+                <TextView
+                    android:id="@+id/tv_what_is_coronavirus_eng_novel_corona_virus_details_frag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="WHAT IS CORONAVIRUS?"
+                    android:textColor="@color/appColorWhite"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="10dp"
+                    android:paddingRight="80dp"
+                    android:paddingEnd="80dp"
+                    android:background="@drawable/bg_tv_new"
+                    android:layout_marginTop="27dp"
+                    android:fontFamily="@font/myriad_pro_regular"
+                    />
+
+
+
+                <TextView
+                    android:id="@+id/tv_des_coronaviruses_novel_corona_virus_details_frag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/coronavirus_des_eng"
+                    android:textColor="@color/light_black"
+                    android:textSize="17sp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:fontFamily="@font/myriad_pro_regular"
+                    />
+
+
+                <TextView
+                    android:id="@+id/tv_what_is_covid_19_eng_novel_corona_virus_details_frag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="COVID-19"
+                    android:textColor="@color/appColorWhite"
+                    android:textStyle="bold"
+                    android:textSize="20sp"
+                    android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="10dp"
+                    android:paddingEnd="50dp"
+                    android:paddingRight="50dp"
+                    android:drawablePadding="70dp"
+                    android:background="@drawable/covid_tv_eng_bg"
+                    android:layout_marginTop="15dp"
+                    android:fontFamily="@font/myriad_pro_regular"
+                    />
+
+
+
+                <TextView
+                    android:id="@+id/tv_des_covid_novel_corona_virus_details_frag"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/covid_19_des_eng"
+                    android:textColor="@color/light_black"
+                    android:textSize="17sp"
+                    android:layout_marginTop="12dp"
+                    android:layout_marginStart="10dp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_marginBottom="40dp"
+                    android:fontFamily="@font/myriad_pro_regular"
+                    />
+
+            </LinearLayout>
+
+
+
+            <LinearLayout
+                android:id="@+id/ll_urdu_tv_container_novel_corona_details_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginLeft="10dp"
+                android:layout_marginStart="10dp"
+                android:gravity="right"
+                android:visibility="visible"
+                app:layout_constraintTop_toBottomOf="@+id/ll_eng_tv_container_novel_corona_details_frag"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                >
+
+                <TextView
+                    android:id="@+id/tv_what_is_coronavirus_urdu_novel_corona_virus_details_frag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="27dp"
+                    android:background="@drawable/tv_bg_urdu"
+                    android:drawablePadding="70dp"
+                    android:layoutDirection="rtl"
+                    android:paddingEnd="80dp"
+                    android:paddingRight="80dp"
+                    android:paddingStart="10dp"
+                    android:paddingLeft="10dp"
+                    android:paddingBottom="5dp"
+                    android:paddingTop="5dp"
+                    android:text="@string/what_is_coronavirus_sindhi"
+                    android:textColor="@color/appColorWhite"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    />
+
 
             <TextView
+                android:id="@+id/tv_des_coronaviruses_urdu_novel_corona_virus_details_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/coronavirus_des_urdu"
+                android:textColor="@color/appColorBlack"
+                android:textSize="17sp"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:layoutDirection="inherit"
+                />
+
+                <TextView
+                    android:id="@+id/tv_what_is_covid_19_urdu_novel_corona_virus_details_frag"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:background="@drawable/covid_tv_urdu_bg"
+                    android:drawablePadding="50dp"
+                    android:layoutDirection="rtl"
+                    android:paddingEnd="50dp"
+                    android:paddingRight="50dp"
+                    android:paddingLeft="10dp"
+                    android:paddingStart="10dp"
+                    android:paddingTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:text="@string/covid_19_urdu"
+                    android:textColor="@color/appColorWhite"
+                    android:textSize="20sp"
+                    android:textStyle="bold"
+                    />
+
+            <TextView
+                android:id="@+id/tv_des_covid_urdu_novel_corona_virus_details_frag"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/covid_19_des_urdu"
+                android:textColor="@color/appColorBlack"
+                android:textSize="17sp"
+                android:layout_marginTop="12dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginEnd="10dp"
+                android:layout_marginBottom="40dp"
+                android:layoutDirection="inherit"
+                />
+
+
+            </LinearLayout>
+
+
+
+
+
+<!--            REMOVE BY KAMRAN ON 9 APRIL 2020-->
+
+            <!--<TextView
                 android:id="@+id/tv_title_novel_corona_virus_frag"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -40,8 +252,6 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"/>
-
-
             <TextView
                 android:id="@+id/tv_details_novel_corona_virus_frag"
                 android:layout_width="match_parent"
@@ -62,7 +272,7 @@
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
+                />-->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
